--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Grouply</title>
+    <link rel="icon" type="image/png" href="./assets/icon.png" />
     <link rel="stylesheet" href="/css/main.css" />
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
